--- a/Hierarchical Reinforcement Learning/2018_Levy.md
+++ b/Hierarchical Reinforcement Learning/2018_Levy.md
@@ -10,11 +10,11 @@
 
 
 #### Keypoints: 
-* Universal MDP: $U(S, A, T, R, G)$ where $R: S \times A \times G \to \mathcal{R}$ or just $R(s,a,g)$
+* Universal MDP: $U=(S, A, T, R, G)$ where $R: S \times A \times G \to \mathcal{R}$ or just $R(s,a,g)$
 * Solve $U_{original}$ via learning hierarchical policy that solves hierarchy of k UMDPs $U_0, ..., U_{k-1}$ where each UMDP represents a different level of temporal abstraction
 	* $U_0$: lowest level of hierarchy - $S_0 = S$, $A_0 = A$, $G_0 = S_0 =S$
 	* $U_i, 0<i<k-1$: $S_i = S$, $A_i = G_{i-1}$, $G_i = S_i$ 
-	* $U_{k-1}: $S_{k-1} = S$, $A_{k-1} = S$, $G_{k-1} = G$
+	* $U_{k-1}: S_{k-1} = S$, $A_{k-1} = S$, $G_{k-1} = G$
 * Action Selection - top-down
 	* $s \in S, g \in S$  are initialized $\to$ $\pi_i: S_i \times G_i \to A_i$ yields $a^{k-1}$
 	* $a^{k-1}$ initializes $g_{k-2} \in G_{k-1}$ and $\pi_{k-2}(s, g_{k-2} = a^{k-1}$ yields $a^{k-2}$
@@ -24,9 +24,9 @@
 	* $a^0$ selected - $\pi^0$ continues until $s=g_0$, afterwards return control to next higher level.
 
 * Motivation for hindsight: In beginning of training we have $a^i = g^{i-1}$ but $\pi_{i-1}$ might not know how to achieve, e.g. $s_{t+1} \neq a^i = g^{i-1}$
-	* $(s_t^i, s_{t+1}^i, g_t^i, s_{t+1)^i, r_{t+1}^i)$: Transition if subgoal achievement failed - action replay: process of substituting hindsight subgoal state for action
+	* $(s_t^i, s_{t+1}^i, g_t^i, s_{t+1}^i, r_{t+1}^i)$: Transition if subgoal achievement failed - action replay: process of substituting hindsight subgoal state for action
 	*  $(s_t^i, a_t^i, g_t^i, a_t^i, r_{t+1}^i)$: Transition if subgoal achievement succeeded
-	*  $(s_t^i, a_t^i, g_t^i, s_{t+1)^i, r_{t+1}^i)$: standard form of a transition
+	*  $(s_t^i, a_t^i, g_t^i, s_{t+1}^i, r_{t+1}^i)$: standard form of a transition
 
 * Action Replay:
 	* Learn with suboptimal policies
